# mesa247-backend-challenge

./: .env.example  .gitignore  COMANDOS_EJECUCION.md  Dockerfile  EXECUTION_GUIDE.md  README.md  START.bat  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 2025_12_30_1805-001_initial_migration_create_all_tables.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: payouts.py  processor.py  restaurants.py  router.py
app/core/: database.py  exceptions.py  logging.py
app/models/: __init__.py  base.py  ledger_entry.py  payout.py  payout_item.py  processor_event.py
app/repositories/: __init__.py  base.py  event.py  ledger.py  payout.py
app/schemas/: __init__.py  payout.py  processor.py  restaurant.py
app/services/: __init__.py  event_processor.py  ledger.py  payout_generator.py
docs/: CAPTURAS_GUIA.md
events/: events.jsonl
scripts/: load_events.py
sql/: queries.sql
tests/: conftest.py
tests/test_api/: test_processor.py  test_restaurants.py
